--- a/catalytic-learders-maximize-potential-at-movement-day-2015.html
+++ b/catalytic-learders-maximize-potential-at-movement-day-2015.html
@@ -72,10 +72,9 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         </div> 
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
-            <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-               <!--SECTION LEFT BEGIN-->
+            <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" --><!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img src="images/dr.mac-pier.jpg" alt="" width="150" height="225" id="authorpic" /> </div>
+            <img src="images/movementdayphotooflogo.png" alt="Movement Day" width="918" height="125" class="full-width-image"><div id="articlepic"><img src="images/dr.mac-pier.jpg" alt="" width="150" height="225" id="authorpic" /> </div>
             <h4 id="articleTitle">Catalytic Leaders Maximize Leadership
               Potential at Movement Day 2015</h4>
               <div id="authorname">Rev. Mac Pier
