--- a/does-prayer-even-make-a-difference.html
+++ b/does-prayer-even-make-a-difference.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Welcome to the Love Express</title>
+<title>Does Prayer Even Make A Difference?</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">events</p>
+        <p class="pageheadertxt">Features</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -73,24 +73,31 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-        <!--SECTION LEFT BEGIN-->
+               <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-  <h4 id="articleTitle">AllAroundTown<br />
-          </h4>
+            <div id="articlepic"></div>
+            <h4 id="articleTitle">Does Prayer Even Make A Difference?</h4>
               <div id="authorname"><!--SECTION LEFT END-->
  </div>
-              <p >The Praise ship continues to press across the country  to bring you the best information that will inspire, encourage and  entertain. Our first  stop was in the Planet Brooklyn, NY.&nbsp;  What happens when you add faith, school and community together? You  receive power!&nbsp;&nbsp; </p>
-              <a href="images/pricipal-beverly-logan-dr-dee-mavis-yon.jpg"><img style="float:right" src="images/pricipal-beverly-logan-dr-dee-mavis-yon.jpg" width="331" height="143" alt="Principal Beverly Logan,Dr. Gee, Mavis Yon"></a>
-<p>Principal Beverly Logan realizes  it take more than just the school board to help our students achieve.&nbsp; It will take the schools, our churches, our  communities to take back our children and our streets.&nbsp; We live in a time where are young black men  are not safe,and our babies cannot walk the streets safely in the day  time.&nbsp; Creating productive programs will  be the only answer and P. S. 156 is definitely moving in the right direction.  This faith-based community fair was the epiphany of what all communities should  be doing, bringing all people together regardless of race  creed or color.&nbsp; If we the people could  come together on one accord with our children, not just our children but their  children, what a nation we could become. &nbsp;</p>
-              <p>At this  community fair there were dancers, musicians, singers,&nbsp; a music production company, a DJ training  company, a rite of passage for a young girl, martial arts, programs to empower  our males, workshops for the parents, and our wonderful churches giving away  food and hope for the future.&nbsp;&nbsp; We thank  the board for its collaboration with the community and the churches for  understanding that without prayer everything will fail. Thank you Mavis Yon for  the invite.&nbsp;&nbsp; </p>
-              <a href="images/jaunita-bynum.jpg"><img style="float:right; padding-left:25px;" src="images/jaunita-bynum.jpg" width="186" height="249" alt="Juanita Bynum"></a>
-              <p>Our  next stop was in Hempstead, NY to the Calvary Tabernacle Church where Rev.  Barrington Goldson is the Pastor for the concert and music release for Juanita  Bynum. Ministering to a standing room only audience, Juanita Bynum once again  showed everyone there why her ministry is known for the movement of God. There  are not many CD release events where the presence of God is so strong that the  alters are lined with worshippers throughout the night. This is the trademark  that follows wherever Dr. Bynum goes. The music took about seven years to mature,  the audience loved her and she did not disappoint them and most importantly,  God was in the place.</p>
-              <p>Thank you Apostle Cheryl Del  Rios and Pastor Goldson for inviting us. Keep the Love Express in the loop for  your future events. </p>
-              <a href="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg"><img style="float:right; padding-left:25px;"  src="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg" width="236" height="208" alt="DJ Cadillac Kid, DJ K-Luv, DJ Dirtyfingers, DJ Rome, Dr. D"></a>
-              <p>The  last stop was a double header solo flight by me, Dr. D., over the Labor Day  Holiday weekend. Although many of you know me as the staff shutterbug for the  Love Express, I also humbly wear the given title of &ldquo;The Original Gospel DJ.&rdquo;  (This is another story all by itself). So over the holiday weekend I was part  of two awesome DJ events. The first one took place that Sunday morning in  Easton PA at the Park Plaza Mall. It was the  final summer event sponsored by the FUNKtion Sound DJs, Dickey&rsquo;s Barbecue Pit,  and Maximum Management. To my nephew Roberto, I&rsquo;m so proud of you. </p>
-              <p>After  leaving PA, the solo ship followed the fine line of route 87 East all the way  down to the Village of Harlem NY for the second part of the double header. We  landed on the campus of City College just in time to kick off our 9th Annual WHCR 90.3 FM DJ Holiday Hours, 6 DJs, 6 Mixes-plus a radio studio full of other DJs, artists, family,  friends and the WHCR radio listeners. Three times a year (Memorial Day, the 4th  of July, and Labor Day) DJ Tina Dixon (of the Sunday Night Praise Break- Sundays from 10pm-1am and I Dr. D., (Late NiteJourney 2- Monday mornings from 1am-4am) combined  radio shows and host a radio holiday DJ party mix similar to back in the days  when radio was about the music and the radio announcers and guest DJs and not radio personalities and the  top 10 repeated songs like you hear today. Our DJs not only showcased their  skills but blew up the 90.3 FM airways and WHCR.org online internet listeners  with some of the best Hip Hop,  R&amp;P, House, Contemporary, and Choir music that Gospel Music had to  offer.This year our underwriting partner was WIBO-Workshops In  BusinessOpportunities&nbsp; (WIBO.org or  Tiffany at 212-684-0854) - and their &ldquo;Turn Your Passion into Profit 16 week  Business Plan writing workshop.What truly amazed many  of the entrepreneurs that were in studio and callers  was that after five years after taking this workshop, over 50% of their  graduates were still in business compared to the national average of 20%. And  yes, Dr. D. is a proud WIBO graduate too for his photography ministry. Big  shout out to the entire guest DJs that spun, DJs TinyTim,NicAponte, Radames  Reyes,Isaiah, and Tina Dixon. Plus much love to our guest artists Angela  &ldquo;Missy&rdquo; Billups and Aaron Gray. </p>
-              <p align="right"><strong>Dr. Gee</strong></p>
-              
+              <p ><em>Jesus told his disciples a  story about how they should keep on praying and never give up. (Luke 18:1 CEV)</em></p>
+              <p>Let&rsquo;s be honest here.&nbsp; How many times have you prayed and prayed&hellip;  and praaaayed about something in your life, only to see no change and no  affirmative answer to your prayer?</p>
+              <p>Perhaps  you prayed for a sick loved one to get better, and he/she died. </p>
+              <p>Perhaps  you prayed for your marriage to improve, and it worsened. </p>
+              <p>Perhaps  you prayed for your finances to come up, and they went down. </p>
+              <p>Perhaps  you prayed for a lost friend&rsquo;s heart to soften, and it hardened.</p>
+              <p>Perhaps  you prayed for a different outcome to the 2014 election, and it didn't happen. </p>
+              <p>What  gives when you pray about something heavy on your heart, something you feel is  good and right, and He doesn't do as you requested.&nbsp; Have you ever gotten discouraged in prayer,  secretly wondering if it even makes a difference? </p>
+              <p class="qa">PRAYER MAKES A DIFFERENCE!</p>
+              <p>To  be sure, prayer is always right and always makes a difference, even when the  results don&rsquo;t go the way you wanted. </p>
+              <p><strong>1.&nbsp; Sometimes we pray the wrong thing, and God  says, &ldquo;No.&rdquo; </strong>&nbsp;He, being omniscient, knows what we need and  what we don&rsquo;t.&nbsp; He knows what is truly  good for us in the long run, and what is not.&nbsp;  When we get a direct &ldquo;no&rdquo; to our prayers, it is God&rsquo;s way of saying,  &ldquo;You are barking up the wrong tree in this request.&nbsp; You are asking me for something that would  not be truly beneficial to you in your walk with Me.&rdquo;&nbsp; Remember, God&rsquo;s priority is not to make you  happy, but to make you holy.&nbsp; And as you  and I grow in holiness, we grow in happiness and real joy. </p>
+              <p>Job,  who had his share of prayers go awry, said, &ldquo;I know that You can do all things,  and that no purpose of Yours can be thwarted&rdquo; (Job 42:2).&nbsp; God will not violate His Word and His Will to  answer your prayer.&nbsp; Every &ldquo;no&rdquo; from God  is an opportunity for us to pray differently.&nbsp;  Even a spiritual heavy weight like Moses got a &ldquo;no&rdquo; from God.&nbsp; In response to his request to go into the  Promised Land &ndash; even though God had already told him he wasn't going to let him  go in &ndash; God said, &ldquo;Enough! Speak to Me no more of this matter&rdquo; (Deut.  3:26).&nbsp; Moses had to change his prayer &hellip;  and sometimes we do too because we don&rsquo;t see the bigger picture. </p>
+              <p><strong>2.&nbsp; Sometimes we pray the right thing, and God  says, &ldquo;Not yet.&rdquo;&nbsp; </strong>In this case, the prayer is right, but the timing is  wrong. There is more work that needs to be done in us and in the circumstances  around us.</p>
+              <p>It  is important to remember that God is NOT some heavenly slot machine who must  pay out if you put in enough &ldquo;prayer&rdquo; coins.&nbsp;  Affirmatively answered prayed is not the ultimate goal of prayer.&nbsp; Communion and fellowship with God is the  ultimate goal. Entering into God&rsquo;s presence and talking with Him from your  heart is what He really wants and what will really change you.</p>
+              <p>How  hard is it for the God who spoke the worlds into existence to answer your  prayer for finances, or health, or a job?&nbsp;  It&rsquo;s as easy as pie.&nbsp; But, how  hard is it for God to change your life and make you a man or woman of character  and Christ-likeness?&nbsp; That is another  matter altogether, and prayer (along with Bible study) is the main vehicle God  has given us to make that happen.&nbsp;&nbsp; </p>
+              <p><strong>3.&nbsp; Sometimes we pray the near-right thing, and  God says, &ldquo;I've got a bigger and better idea.&rdquo; </strong>&nbsp;Perhaps you join  with the multitudes who pray for righteousness to prevail in an election &hellip; that  Americans would rise up and repudiate candidates who espouse a biblically  immoral agenda. Even if that prayer is not answered affirmatively, it is not a  wasted prayer. </p>
+              <p>God  is getting ready to answer that prayer in a bigger and better way.&nbsp; Jesus Christ, the Righteous Judge, is one day  closer to returning to planet earth to set up His righteous rule and reign.&nbsp; You see, the Bible makes it clear that things  get progressively worse before His coming.&nbsp;  But when He comes, all is made right.&nbsp;  In that coming day, His perfect will shall be the order of the day.&nbsp; Love and joy and peace and safety will cover  the land as the waters cover the sea.&nbsp; I  can&rsquo;t wait!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+              <p>My  friend, if you have gotten discouraged in your prayers &hellip; keep praying.&nbsp; He is good.&nbsp;  He is God, and He never makes a mistake.&nbsp;  He longs to hear from you and change you as you marinate in His awesome  presence.&nbsp; Jesus said, &ldquo;Pray all the time  and never give up&rdquo; (Luke 18:1 GW).&nbsp; Will  you do it?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+              <p><strong><em>Pastor Jeff Schreve, From  His Heart Ministries&nbsp;&nbsp; </em></strong>&nbsp;&nbsp;&nbsp;</p>
 </div>
           <div id="body_adspace"></div>
           <!-- InstanceEndEditable --> 
