--- a/edithstranges-editorial-30th-anniversary.html
+++ b/edithstranges-editorial-30th-anniversary.html
@@ -3,7 +3,7 @@
 <html><!-- InstanceBegin template="/Templates/lovexcss2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>June Editorial</title>
+<title>Editorial</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -87,25 +87,39 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="articlepic"></div>
             
 <div id="articlepic">
-  <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4>Editorial: 30th Anniversary of The Love Express</h4>
+  <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4>Editorial: </h4>
 <div id="authorname">Edith Stranges</div>
 
-<p align="center"><strong><em>Reprinted from April 1986,  to help clarify and redefine the objective and purpo&shy;ses of The Love Express.</em></strong></p>
-<p align="center"><strong>&ldquo;Walking in the Vision&rdquo;</strong></p>
-<p>I have always believed that one  of the greatest strengths of <strong>The Love Express</strong> is that it&rsquo;s more than  just a collection of interesting, biblically sounding articles, but rather it  is a very important factor in God&rsquo;s overall vision of unity and revival for New  York City.</p>
-<p>I  am sure that many pastors, laymen, businessman are still skeptical as to whe&shy;ther <strong>The</strong> <strong>Love Express</strong> is for the whole Body of Christ, or just to  promote one ministry.  It is my  desire in this brief article to present the vision and purpose of <strong>The</strong> <strong>Love</strong> <strong>Express</strong>, that God has not only stirred in my heart; but in the hearts  and minds of believers and pastors throughout this metropolitan area. </p>
-<p>As  a wife of a pastor, a former preacher&rsquo;s kid and one who has lived and worked in  Manhattan; I can say that I am committed to helping churches, ministries and  businesses of all sizes be more effective in reaching the people of New York  City. Many who have already advertised in <strong>The</strong> <strong>Love</strong> <strong>Express</strong> are saying, &ldquo;This is exactly what we have needed to streng&shy;then our outreach to  our community and this city.&rdquo;</p>
-<p>This  pleases me, because the goal of <strong>The</strong> <strong>Love Express</strong> is&nbsp; to assist believers in our joint calling of  evangelism in New York City. For those of you that have come to know me, either  personally or through <strong>The</strong> <strong>Love Express</strong> know that the heart of my  efforts is the reconciliation of the Lord&rsquo;s church, the body of Christ; and  that <strong>The</strong> <strong>Love</strong> <strong>Express</strong> is not building a separate new  ministry or any ministry already in existence.</p>
-<p><strong>The</strong> <strong>Love</strong> <strong>Express</strong> is a network of communication between the body of  Christ, &ldquo;all of God&rsquo;s people working together, the world might know that thou  hast sent us. (John 17:21).</p>
-<p>In  the last 8 months since the miracle of <strong>The Love</strong> <strong>Express</strong> was born  in New York City in 1985, there have been 10 folks who have been born again as  a direct result of the printed word of God in <strong>The</strong> <strong>Love</strong> <strong>Express</strong>.  Nearly 100 of you have written in to have <strong>The</strong> <strong>Love</strong> <strong>Express</strong> sent to a friend.</p>
-<p>Working  in the <strong>Love</strong> <strong>Express</strong> has taught me much about patience, love,  forgiveness, and humbleness. I ne&shy;ver consider myself a leader, a frontman, a  prophetess, yet those are the names that people use when they speak of me. I  consider myself a servant of the Lord.</p>
-<p>I  don&rsquo;t speak for any denomination, fellowship or organization, but for the thou-  sands of Christians in the Tri-state area.</p>
-<p>This  however, is how <strong>The</strong> <strong>Love</strong> <strong>Express</strong> runs. I have completely  trusted the Lord for these last 30 years and you know it takes waiting on God,  and patience, but it&rsquo;s worth it all to know this is God&rsquo;s newspaper. This paper  is a reflection of <strong>what it will be like in Heaven.</strong></p>
-<p>Some  have said to me &ldquo;What are your demograph<strong>ics? What market are you reaching?&rdquo;  &ldquo;It&rsquo;s ok to have healthy competition.&rdquo;</strong> My answer is, &ldquo;I have never known  competition to be healthy. It creates bad feelings, envy, jealousy and  confusion for the Body of Christ, and that is not healthy.&rdquo; &ldquo;What market are  you reaching?&rdquo; I answer, &ldquo;God&rsquo;s marketplace where He said, &ldquo;The harvest is  ripe,&rdquo; where He sees people of all color, nations and cultures.&rdquo; &ldquo;What are your  dempgraphics?&rdquo;</p>
-<p><strong>We are The Love Express, One  Body, One Lord, One Spirit, One God; One way to heaven through Jesus Christ.  Jesus said, <em>&ldquo;that they may be one;&rdquo;</em> all un&shy;der one umbrella, one pa&shy;per  to the tri-state area.</strong></p>
-<p>A  few years ago there were Love Expresses in New Jersey, Long Island and in NYC.  At that time I had the responsibility for NYC. Some pastors, who were from NJ  and LI, desired to be in one paper. Because of the work volume and finances,  the other Love Expresses stop&shy;ped printing. Then after much prayer and  counseling, what came forth is the paper you are now reading.</p>
-<p><strong>The Love Express is not a Baptist, Methodist, Lu&shy;&shy;theran,  Nazarene, Pentecostal, AME, COGIC, Church of God, Charisma&shy;tic, Christian  Center or any other denominational pa&shy;per. Nor is it a <em>Black thing</em> or <em>White  thing</em>. It is a Christian Newspaper accessible to all in the Body of Christ.</strong></p>
-<p align="right"><strong>Edith M. Stranges</strong></p></div><!-- InstanceEndEditable --> 
+<p align="center">30 years; it is wonderful that  God&rsquo;s mercy and grace has been on this paper. <br>
+  </p>
+<p align="center"> My  heart is the heart of the Father and he has given to us the ministry of  reconciliation and I am so grateful that the Movement Day has put together the  &ldquo;Movement Declaration&rdquo; which is an opportunity for us as the Body of Christ to  mutually declare our commitment to each others and to our respective ci&shy;ties.  Read the declaration in the article &ldquo;Movement Day 2015.&rdquo;<br>
+  </p>
+<p align="center"> You  are precious to me, my readers, but you know as well as I know there&rsquo;s got to  be more: more love, more integrity, more power, more commitment. Integrity is  the soundness of moral principle and character. It has to do with honesty and  uprightness.<br>
+  </p>
+<p align="center">In  these days, integrity is a rare commodity. In business or ministry, true  soundness of moral principles is hard to find.<br>
+  </p>
+<p align="center">In  my own life, I find that I&rsquo;m tested on the principle of integrity. Most of my  dealings are with pastors. I would say 99% are good, honest, and truthful men  of God. I thank God for them and continue to uphold them in prayer. Yet the 1%  like to challenge us. They have their own selfish agendas without any regard  for the whole <b>Body</b> <b>of</b> <b>Christ</b>. They deliberately attempt to  disrupt the move of God because of jealousy and carnality. I know this is the  hour to be mature, responsible, resisting the devil, and to love and respect  one another in the <b>Body of Christ</b>, love God and be obedient to His Word.  If you fall or yield to temptation, quickly repent, fast and pray, live holy  unto the Lord, and don&rsquo;t just talk the words; <b>live it, breathe it.</b><br>
+  </p>
+<p align="center">I  want to say to the pastors, business people who walk through the doors of <b>The  Love Express</b>, or who are in communication with us by phone, &ldquo;I&rsquo;m sorry if I  or the staff of <b>The Love Express </b>didn&rsquo;t show you courtesy, respect or  love. I repent as the Editor, and I take full responsibility. What I say in the  editorial is also for the staff and myself. We must live the life that we  teach.<br>
+  </p>
+<p align="center">Again  I thank all supporters, advertisers, pastors of <b>The Love Express</b>. May  God continue to bless you as you have been a blessing to this present ministry.<br>
+  </p>
+<p align="center"><b>The Love Express is not a Baptist, Methodist, Lu&shy;&shy;theran,  Nazarene, Pentecostal, AME, COGIC, Church of God, Charisma&shy;tic, Christian  Center or any other denominational pa&shy;per. Nor is it a <i>Black thing</i> or <i>White  thing</i>. It is a Christian Newspaper accessible to all in the Body of Christ.</b> <br>
+  </p>
+<p align="center"><b>Edith M. Stranges, 
+  </b><b>The Love Express</b><br>
+  </p>
+<p align="center"><b>Who We Are</b><b>.</b><br>
+  <b>&nbsp;&bull; </b>A network of communication between the Body Christ.</p>
+<p>&nbsp;&bull; A viable tool of evangelism for the  spiritually lost.</p>
+<p>&nbsp;&bull; A Ministry of Reconciliation.</p>
+<p>&nbsp;&bull; A Bridge Builder for people that have been  separated from God, and from each other.</p>
+<p>&nbsp;&bull; A reflection of the Body of Christ here on  earth and what we will be in heaven. We are spokes in a wheel, but running on a  journey to heaven.</p>
+<p>&nbsp;&bull; We offer hope. Look at the pages of this  paper, and you&rsquo;ll see visionaries who touch lives each month.</p>
+<p>&nbsp;&bull; We are combating racism and prejudices in  any form or method that it may come.</p>
+<p>&nbsp;&bull; We may have doctrinal differences, but let  us not adopt a doctrine of exclusivity or territorialism in which we won&rsquo;t even  allow ourselves to develop relationships with others.</p>
+<p>&nbsp;&bull; Be on the <b>Cutting Edge</b>. Ask your  pastor to have <b>The Love Express </b>delivered Free each month to your  church.</p>
+</div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
