--- a/events.html
+++ b/events.html
@@ -109,28 +109,67 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
-                <h2>Collyde Summit 2015</h2>
-                <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in    ...<a href="collyde-summit-2015.html">Read More</a>
+                  <img src="images/tony-kemp2.jpg" width="92" height="85" alt="tony kemp"></div>
+                <h2>Trifecta - Conference - Nov. 12th-14th.</h2>
+                <p>M<strong>antle of Power Mi&shy;nistries</strong> presents <strong>Trifecta Con&shy;fe&shy;rence </strong>(Spirit, Soul, Body) <strong>Thurs&shy;day-Saturday,  No&shy;vember 12th-14th</strong> with <strong>Bishop Jo&shy;seph Garlington</strong>, (Cove&shy;nant  Church of Pittsburg), <strong>Tony Kemp</strong>, (Tony Kemp Ministries), <strong>Katie Souza</strong> (Katie Souza Ministries), and your host <strong>Paulette Polo </strong>(Mantle of Power    ...<a href="trifecta-conference-nov-12-14th.html">Read More</a>
+</p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/alcc-wwconv2015-newspaper-fp-color-oct-ad-clara-franklin.jpg" alt="" name="authorpic" width="142" height="85" id="authorpic2" /></div>
+                <h2>Enlarge My Coast</h2>
+                <p>A<strong>bundant Life Chris&shy;tian  Center (WWC) Worldwide Conven&shy;tion 2015</strong> with <strong>Pastor Mike Adebiyi</strong>, <strong>Bishop  Tudor Bis&shy;mark</strong>,<strong>Pastor Matthew Ashi&shy;molowo</strong>, <strong>Bishop Paul Mor&shy;ton</strong>.  Hosted by <strong>Dr. Fes&shy;tus Adeyeye</strong>. Enlarge My Coast (1 Chronicles 4:10, <strong>Septem&shy;ber  30th-October 4th</strong> (<strong>Wed&shy;nesday-Saturday:</strong>    ...<a href="alcc-worldwide-convention.html">Read More</a>
+</p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/carol-kent.jpg" alt="" name="authorpic" width="84" height="85" id="authorpic3" /></div>
+                <h2>Women&rsquo;s Conference 2015<br>
+                </h2>
+                <p>C<strong>alvary Baptist Church</strong> - <strong>Women&rsquo;s  Conference 2015 </strong>(Topic: Unquenchable Faith) with guest Speaker <strong>Carol  Kent</strong>, <strong>Saturday, No&shy;vember 14th, 9:30am-4pm</strong> @ 123 West 57th Street,  (between 6th &amp; 7th Ave&shy;nues), New York, NY 10019. <strong>Carol  Kent</strong> is a best-selling author and a popular international public     ...<a href="womens-conference-2015.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/jaunita-bynum.jpg" width="63" height="85" alt="Juanita Bynum"></div>
+                <h2>DCC Holy Convocation</h2>
+                <p>D<strong>unamis Covenant Connection  Holy Convocation</strong> (Go&shy;vernment, Glory &amp; Growth), <strong>Wed-Sun, Oc&shy;tober  14th-18th</strong> <strong>7:30pm</strong> nightly (<strong>Sat: Pastoral Luncheon</strong> @ <strong>12noon;  Sun:4pm-Official Day</strong>). Speakers: <strong>Dr. Ja&shy;mal Bryant</strong>, <strong>Archbishop  Roy E. Brown</strong>, <strong>Ambassa&shy;dor</strong> <strong>Juanita</strong> <strong>By&shy;num</strong> &amp; <strong>Arch&shy;bishop  </strong>    ...<a href="dcc-holy-convocation.html">Read More</a>
+</p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/david-burrows.jpg" width="64" height="85" alt="Pastor David Burrows"><img src="images/dean-brown.jpg" alt="Pastor Dean A. Brown" name="authorpic" width="64" height="85" id="authorpic4" /></div>
+                <h2>Men Alive 2015<br>
+                </h2>
+                <p>C<strong>hrist Alive Chris&shy;tian  Center Men&rsquo;s Con&shy;ference Men Alive 2015 Thursday-Saturday, October 22nd-24th</strong> with <strong>Pastor David Burrows</strong> and <strong>Pastor Dean A. Brown. (Thurs &amp; Fri  @ 7pm; Sat &amp; Sun @ 10am). </strong>Registration Fee:Adult Men - $25; Jr. High  &amp; Hight School Young Men&nbsp; - Free.  (Saturday Lunch is     ...<a href="men-alive-2015.html">Read More</a>
 </p>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/newsboys.png" alt="" height="85" /><br>
+                  <img src="images/halloween.jpg" alt="" name="authorpic" width="123" height="85" id="authorpic" /><br>
 </div>
-                <h2>Star 99.1fm / Six Flags</h2>
-                <p>Join <b>Star 99.1</b> and make  it a memorable day for your family or youth group with one of Christian music&rsquo;s  hottest bands! Plus the Star Family Picnic in&shy;cludes an all-you can-eat buffet  of cheeseburgers, chicken nuggets, beans, cole slaw and soft drinks. <b>September 12th - Fall Cele&shy;bration  Concert </b> ...<a href="six-flags-star-991fm-wlib-1190-concerts.html">Read More</a>                </p>                <div id="articlepic">
+                <h2>H a l l o w e e n</h2>
+                <p>The origins and traditions of  Halloween can be traced back thousands of years to the days of the ancient  Celts and their priests, the Druids. The eve of October 31 marked the  transition from summer into the darkness of winter. It marked the Celtic New  Year. The Feast of Samhain was a fearsome night, a dreaded night,   ...<a href="halloween.html">Read More</a>                </p> 
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/nathan-morris.jpg" alt="Nathan Morris" title="Nathan Morris" name="authorpic" width="69" height="85" id="authorpic" /></a><br>
+                  <img src="images/star99.jpg" alt="" name="authorpic" width="198" height="85" id="authorpic5" /><br>
+</div>
+                <h2>Networking Breakfasts</h2>
+                <p>Join <strong>Star99.1</strong> for one of  our upcoming monthly <strong>Networking Breakfast</strong> meetings. This is your place  to network, socialize and learn from one of our guest speakers on topics that  are sure to help you and your business. Upcoming Meet&shy;ings: <strong>December 10th</strong> - The Olde Mill Inn, 225 Route 202, Basking Ridge, New Jer&shy;sey...<a href="halloween.html">Read More</a>                </p>                               
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
   </div>
-                <h2>Regional Renewal</h2>
-                <p><strong>Paulette</strong><strong> Polo/Man&shy;tle of  Power Minis&shy;tries</strong> presents <strong>Regional Renewal</strong>, <strong>Friday, Septem&shy;ber  4th, 7pm</strong> and <strong>Satur&shy;day, September 5th, 10am</strong> &amp; <strong>7pm</strong>, <strong>Heating  Things Up</strong> with <strong>Evangelist Na&shy;than Mor&shy;ris</strong>. $20 for entire weekend;  $25 per married couple (Husband and wife). Since the ministry&rsquo;s conception   ...<a href="regional-renewal-nathan-morris.html">Read More</a><br>
+                <h2>Oasis Singles Fall Celebration </h2>
+                <p>Discover the power of praise!  This year the theme of our <strong>OASIS Fall Celebration </strong>will be <strong>&ldquo;A Night of  Worship RAISE THE PRAISE!&rdquo; </strong>You are invited to join hundreds of Christian  singles of all ages, from all walks of life and from all denominations  throughout the tri-state area for this uplifting evening featuring dinner,  dessert   ...<a href="cindygaldalruperto.html">Read More</a><br>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic8" /><br>
   </div>
-                <h2>Combat Child Obesity </h2>
-                <p>September is Kids Eat Right  Month, an initiative to combat childhood obesity, launched by the Academy of  Nutrition and Dietetics as an extension of First Lady Michelle Obama&rsquo;s Let&rsquo;s  Move campaign. In 2012, more than 33% of children and adolescents were  overweight or obese. Obesi&shy;ty can lead to heart disease ...<a href="elizabethmadison-combat-child-obesity.html">Read More</a></p>
+                <h2>Nutrition &amp; Autoimmune Diseases</h2>
+                <p><strong>I</strong>n the last few years, I&rsquo;ve seen an increase in the  number of my clients that have been diagnosed with autoimmune diseases such as  lupus, fibromyalgia, and rheumatoid arthritis. These are chronic conditions  that can severely impact one&rsquo;s quality of life. My clients always ask if they  can treat their condition through healthy ...<a href="elizabethmadison-nutrition-and-autoimmunie-diseases.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <a href="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg"><img style="float:right; padding-left:25px;"  src="images/djs-cadillac-kid-k-luv-dirtyfingers-rome-n-dr-d-.jpg" width="96" height="85" alt="DJ Cadillac Kid, DJ K-Luv, DJ Dirtyfingers, DJ Rome, Dr. D"></a><br>
+  </div>
+                <h2>AllAroundTown<br />
+                </h2>
+                <p>Principal Beverly Logan realizes  it take more than just the school board to help our students achieve.&nbsp; It will take the schools, our churches, our  communities to take back our children and our streets.&nbsp; We live in a time where are young black men  are not safe,and our babies cannot walk the streets safely in the day  time ...<a href="allaroundtown.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
@@ -143,20 +182,20 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"><br>
 </div>
                 <h2>Healing Through The Word</h2>
-                <p>All the  blessings and promises that are in the Bible were crea&shy;ted by the love of God.  He loved us so much that He sent His Son Jesus so we could be Saved, Healed and  Delivered. How do we receive these blessings and promises? Many times we are  waiting on God to send them. We pray <em>&ldquo;God  I need healing and deliverance&rdquo;</em>&nbsp; and we  wait for God  ...<a href="ellencomis.html">Read More</a>
+                <p>Are you praying for a  miracle?&nbsp; Is there a situation in your  life that needs God&rsquo;s healing touch? Today I would like to speak about the  importance of saying what God says about your situation and not allowing words  that are opposite to His Word come out of your mouth.&nbsp; Before I go any further let&rsquo;s look at what  the Bible has to say   ...<a href="ellencomis-healing-through-the-word.html">Read More</a>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits"> </div>
                   <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
             </div>
-                <h2><span class="qa">Practicing An Attitude of Gratitude</span></h2>
-                <p>Hello Beloved! This is the Day the Lord HatH Made. Let us  Rejoice and Be Glad in it! Is this your mindset today or in this phase  of your life? Are you really glad or are you mad or perhaps sad. In everything  give thanks for this is the will of God concerning you. 1 Thessalonians. I urge  you to make a choice. Choose to rejoice, choose to be<strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <h2><span class="qa">The Importance of The School Year Routine</span></h2>
+                <p align="center">The school year 2015- 2016 is  well on its way. Its extremely important for the school year routines to be  checked and possibly re-vamped to ensure success and promotion.&nbsp; 1.  Hopefully by now the bedtime hour has been set and is being followed. An early  set bedtime is vital. The National                Sleep Foundation says kids ages  ...<a href="focuson.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
-    </div>
-                <h2>Living Victory</h2>
-                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a>
+                  <img src="images/donaldreid.jpg" alt="" width="63" height="85" /><br>
+</div>
+                <h2>How to Survive a Tax Audit</h2>
+                <p>If  you&rsquo;re going through your records and find that some of them are missing, call  for duplicates immediately. Don&rsquo;t just go to the audit and claim that the  records are missing or lost. That does you no good at all. At best, the auditor  will request that you obtain the records. At worst, the deduction in question  will be denied, since &nbsp;        ...<a href="living-victory-copeland.html">Read More</a>
                   <br>
                   <br>
                 </p>
