--- a/index.htm
+++ b/index.htm
@@ -215,9 +215,10 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <div class="divider"></div>
                 <div class="bodytxt" style="padding:10px;
                       background-color:#e8e2d6">
-                  <div style="float:left; padding-right:15px;"><a href="30th-anniversary.html"><img src="images/michael-leonard-james-headshot.jpg" alt="" name="authorpic" width="300" height="222" id="authorpic4" /></a></div>
-<p class="style14" style="margin: 5px 0 -3px 0; text-align:center;">30th Anniversary</p>
-<p >Wow! Has it actually been 30  years since we started this awesome ministry tool? As difficult as it is to  believe that much time has passed, I've shared before how The Love Express has  impacted my personal life. I met the young lady who would one day become my  wife of 25 years, (this September 1) and the mother of my three babies Michael  II, Rachael &amp; Mit&shy;chel, currently ages 23, 21 &amp; 12 respectively  ...<a href="30th-anniversary.html">Read More</a></p>
+                  <div style="float:left; padding-right:15px;"><a href="images/war-room-poster-2a015.jpg"><img src="images/war-room-poster-2015.jpg" alt="" name="authorpic" width="300" height="300" id="authorpic" /></a></div>
+<p class="style14" style="margin: 5px 0 -3px 0; text-align:center;">War Room Wins Big<br>
+With The Power of Prayer</p>
+<p >War Room&rsquo;s Priscilla Shirer  (Elizabeth Jordan) and her husband T.C. Stallings (Tony Jordan) are a couple  who on the surface have it all: solid careers, a beautiful home, and a cute  middle schooler. The reality is quite different than appearances. They live in  a metaphorical &ldquo;war zone&rdquo; and they quite regularly ambush each other with harsh  and cynical words. The couple&rsquo;s main weapon of destruction is a festering anger  that permeates every fragile interaction. Tony treats his wife like an  insurgent; he is irritated (bordering on incensed) at   ...<a href="30th-anniversary.html">Read More</a></p>
                   <div style="clear:both;"></div>
                 </div>
                 <div class="divider"></div>
@@ -287,31 +288,33 @@ onclick="MM_openBrWindow('ads/kingdomreformationad.html','','scrollbars=yes,widt
                           <div class="bodytxt">
                             <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/racial-reconciliation-photo.jpg" alt="" name="authorpic" height="85" id="authorpic5" /></a><br>
-</div>
-                <h2>How to Actually Fight<br>
-for Racial Reconciliation</h2>
-                <p>These days, as people around the  nation become more aware of racial injustice, many young Christians of all  races are eager to be part of the solution. That&rsquo;s  great news; we need every available hand on deck! But since so many of us have  grown up in ra&shy;cially isolated communities, many...<a href="how-to-actually-fight-for-racial-reconciliation.html">Read More</a><br>
-              </p>
-              
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/dr.mac-pier.jpg" alt="" name="authorpic6" width="57" height="85" id="authorpic6" /></div>
                 <h2>Catalytic Leaders Maximize Leadership
               Potential</h2>
                 <p>For the past five years <strong><u>Movement  Day</u></strong> has been catalyzing leadership teams to serve the world&rsquo;s largest  cities more effectively by advancing high-level, city-changing collaborative  partnerships. On <strong>October 29, 2015</strong>, leaders will once again gather at the  New York Hilton Midtown to advance Gospel movements in cities     ...<a href="catalytic-learders-maximize-potential-at-movement-day-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/shirely-caesar-jpg-photo.jpg" alt="Shirley Caesar" title="Shirley Caesar" name="authorpic" width="116" height="85" id="authorpic6" /></div>
-                <h2>2015 New York Empowerment Summit</h2>
-                <p> <strong>Labor</strong> <strong>Day</strong> <strong>Weekend Sept.</strong> <strong>5th</strong> &amp; <strong>6th</strong> The Theater at  Madison Square Garden with <strong>Shirley  Caesar, Marvin</strong> <strong>Sapp</strong>, <strong>Cece</strong> <strong>Wi&shy;nans</strong>, <strong>Tye</strong> <strong>Tribbett</strong>, <strong>Dr</strong>. <strong>Jasmin Sculark</strong>, <strong>Dorinda</strong> <strong>Clark-Cole</strong>, <strong>Martha Munizzi,  Ta&shy;sha</strong> <strong>Cobbs</strong>, <strong>Wess Morgan</strong>, <strong>Mar</strong><strong>via</strong> <strong>Providence, Uche</strong> <strong>Agu</strong>, <strong>Kevin</strong> <strong>Downswell</strong>, <strong>Travis</strong> <strong>Greene</strong> and more  ...<a href="2015-new-york-empowerment-summit.html">Read More</a>
-<div id="articlepic">
+</div>
+                <h2>Appreciation Month
+Prayers 
+For Your Pastor</h2>
+                <p>Let the thought sink deep into  the heart of every church, that their minister will be such a minister as their  prayers make him... How perilous is the condition of that minister... whose  heart is not encouraged, whose hands are not strengthened, and who is not  upheld by the prayers of his people!                 &ldquo;It  is at a fearful expense that ministers are  ...<a href="prayers-for-your-pastors-appreciation-month.html">Read More</a>                                
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bert-alice-bocachica.jpg" alt="" name="authorpic" width="89" height="85" id="authorpic7" /></div>
-                <h2>Our Vision, Heart, Passion
-and Mission is Evangelism </h2>
-                <p>Last August, during Rap Fest 2014, as some ar&shy;tists were  gracing the stage and others were hitting the vendor areas skillfully securing  their next feature, cy&shy;pher,  sponsorship, gig or tour, the Lord  impressed a powerful Word upon my wife and I and our hearts were heavy.                 Rap Fest was  created with the purpose of evangelizing local neighborhoods by     ...<a href="our-vision-bert-and-alice-bocachica.html">Read More</a>
-                <p>&nbsp;</p>            
+                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic4" /></div>
+                <h2>I Must Be About My Father&rsquo;s
+Business - Jesus </h2>
+                <p>Not only is Jesus our Savior and  Lord, He&rsquo;s also the CEO of Father&rsquo;s business. He produces fine, living  products, and supplies unique services to unbelievers and believers who are  among His customers. We  were once lost and condemned to death because of sin.&nbsp; His service to us was that     ...<a href="jimbiscardi-about-my-fathers-business.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                </div>
+                <h2>Does Prayer Even Make A Difference?</h2>
+                <p><em>Jesus told his disciples a  story about how they should keep on praying and never give up. (Luke 18:1 CEV)</em>                Let&rsquo;s be honest here.&nbsp; How many times have you prayed and prayed&hellip;  and praaaayed about something in your life, only to see no change and no  affirmative answer to your prayer?...<a href="collyde-summit-2015.html">Read More</a>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/rose-vacation.jpg" name="authorpic" width="72" height="85" id="authorpic3" align="right" /></div>
+                <h2>Viewpoint: Vacation-Kids-Jesus-Beauty</h2>
+                <p>On Cruise ships they always have  interdenominational services on Sunday mornings. I always enjoy these services  and met Pastors and their families who sometimes knew about the Love Express. At  Resorts they always have a Gideon Bible or a Spanish Bible in the End table  draws   ...<a href="rose-lictro--vacation.html">Read More</a></p>           
                 <h4 id="articleTitle"><a
                                     href="features.htm">More Features
                               &gt;&gt; </a></h4>
@@ -332,9 +335,9 @@ and Mission is Evangelism </h2>
                   <div style="text-align:center;"></div>
                   <hr style="">
                   <div class="editordesk">
-                    <h4 id="articleTitle">Editor's desk:  30th Anniversary of The Love Express</h4>
-                    <p><b><i></i></b>I have always believed that one  of the greatest strengths of <strong>The Love Express</strong> is that it&rsquo;s more than  just a collection of interesting, biblically sounding articles, but rather it  is a very important factor in God&rsquo;s overall vision of unity and revival for New  York City ... <a
-                            href="edithstranges-editorial.html">Read More</a></p>
+                    <h4 id="articleTitle">Editor's desk:</h4>
+                    <p><b><i></i></b>My  heart is the heart of the Father and he has given to us the ministry of  reconciliation and I am so grateful that the Movement Day has put together the  &ldquo;Movement Declaration&rdquo; which is an opportunity for us as the Body of Christ to  mutually declare our commitment to each others and ... <a
+                            href="edithstranges-editorial-30th-anniversary.html">Read More</a></p>
                   </div>
                   <hr style="">
                   <div style="text-align: center;"></div>
@@ -354,35 +357,35 @@ and Mission is Evangelism </h2>
                           <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
-                <h2>Collyde Summit 2015</h2>
-                <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in    ...<a href="collyde-summit-2015.html">Read More</a>
+                  <img src="images/tony-kemp2.jpg" width="92" height="85" alt="tony kemp"></div>
+                <h2>Trifecta - Conference - Nov. 12th-14th.</h2>
+                <p>M<strong>antle of Power Mi&shy;nistries</strong> presents <strong>Trifecta Con&shy;fe&shy;rence </strong>(Spirit, Soul, Body) <strong>Thurs&shy;day-Saturday,  No&shy;vember 12th-14th</strong> with <strong>Bishop Jo&shy;seph Garlington</strong>, (Cove&shy;nant  Church of Pittsburg), <strong>Tony Kemp</strong>, (Tony Kemp Ministries), <strong>Katie Souza</strong> (Katie Souza Ministries), and your host <strong>Paulette Polo </strong>(Mantle of Power    ...<a href="trifecta-conference-nov-12-14th.html">Read More</a>
 </p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/newsboys.png" alt="" height="85" /><br>
-</div>
-                <h2>Star 99.1fm / Six Flags</h2>
-                <p>Join <b>Star 99.1</b> and make  it a memorable day for your family or youth group with one of Christian music&rsquo;s  hottest bands! Plus the Star Family Picnic in&shy;cludes an all-you can-eat buffet  of cheeseburgers, chicken nuggets, beans, cole slaw and soft drinks. <b>September 12th - Fall Cele&shy;bration  Concert </b> ...<a href="six-flags-star-991fm-wlib-1190-concerts.html">Read More</a>                </p>                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/nathan-morris.jpg" alt="Nathan Morris" title="Nathan Morris" name="authorpic" width="69" height="85" id="authorpic" /></a><br>
-  </div>
-                <h2>Regional Renewal</h2>
-                <p><strong>Paulette</strong><strong> Polo/Man&shy;tle of  Power Minis&shy;tries</strong> presents <strong>Regional Renewal</strong>, <strong>Friday, Septem&shy;ber  4th, 7pm</strong> and <strong>Satur&shy;day, September 5th, 10am</strong> &amp; <strong>7pm</strong>, <strong>Heating  Things Up</strong> with <strong>Evangelist Na&shy;than Mor&shy;ris</strong>. $20 for entire weekend;  $25 per married couple (Husband and wife). Since the ministry&rsquo;s conception   ...<a href="regional-renewal-nathan-morris.html">Read More</a><br>
-                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic8" /><br>
-  </div>
-                <h2>Combat Child Obesity </h2>
-                <p>September is Kids Eat Right  Month, an initiative to combat childhood obesity, launched by the Academy of  Nutrition and Dietetics as an extension of First Lady Michelle Obama&rsquo;s Let&rsquo;s  Move campaign. In 2012, more than 33% of children and adolescents were  overweight or obese. Obesi&shy;ty can lead to heart disease ...<a href="elizabethmadison-combat-child-obesity.html">Read More</a></p>
+                  <img src="images/alcc-wwconv2015-newspaper-fp-color-oct-ad-clara-franklin.jpg" alt="" name="authorpic" width="142" height="85" id="authorpic2" /></div>
+                <h2>Enlarge My Coast</h2>
+                <p>A<strong>bundant Life Chris&shy;tian  Center (WWC) Worldwide Conven&shy;tion 2015</strong> with <strong>Pastor Mike Adebiyi</strong>, <strong>Bishop  Tudor Bis&shy;mark</strong>,<strong>Pastor Matthew Ashi&shy;molowo</strong>, <strong>Bishop Paul Mor&shy;ton</strong>.  Hosted by <strong>Dr. Fes&shy;tus Adeyeye</strong>. Enlarge My Coast (1 Chronicles 4:10, <strong>Septem&shy;ber  30th-October 4th</strong> (<strong>Wed&shy;nesday-Saturday:</strong>    ...<a href="alcc-worldwide-convention.html">Read More</a>
+</p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <br>
-</div>
-                <h2>The Five Star Man</h2>
-                <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value  ...<a href="naomi-williams--the-five-star-man.html">Read More</a><br>
-                </p>
+                  <img src="images/carol-kent.jpg" alt="" name="authorpic" width="84" height="85" id="authorpic3" /></div>
+                <h2>Women&rsquo;s Conference 2015<br>
+                </h2>
+                <p>C<strong>alvary Baptist Church</strong> - <strong>Women&rsquo;s  Conference 2015 </strong>(Topic: Unquenchable Faith) with guest Speaker <strong>Carol  Kent</strong>, <strong>Saturday, No&shy;vember 14th, 9:30am-4pm</strong> @ 123 West 57th Street,  (between 6th &amp; 7th Ave&shy;nues), New York, NY 10019. <strong>Carol  Kent</strong> is a best-selling author and a popular international public     ...<a href="womens-conference-2015.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/jaunita-bynum.jpg" width="63" height="85" alt="Juanita Bynum"></div>
+                <h2>DCC Holy Convocation</h2>
+                <p>D<strong>unamis Covenant Connection  Holy Convocation</strong> (Go&shy;vernment, Glory &amp; Growth), <strong>Wed-Sun, Oc&shy;tober  14th-18th</strong> <strong>7:30pm</strong> nightly (<strong>Sat: Pastoral Luncheon</strong> @ <strong>12noon;  Sun:4pm-Official Day</strong>). Speakers: <strong>Dr. Ja&shy;mal Bryant</strong>, <strong>Archbishop  Roy E. Brown</strong>, <strong>Ambassa&shy;dor</strong> <strong>Juanita</strong> <strong>By&shy;num</strong> &amp; <strong>Arch&shy;bishop  </strong>    ...<a href="dcc-holy-convocation.html">Read More</a>
+</p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/david-burrows.jpg" width="64" height="85" alt="Pastor David Burrows"><img src="images/dean-brown.jpg" alt="Pastor Dean A. Brown" name="authorpic" width="64" height="85" id="authorpic4" /></div>
+                <h2>Men Alive 2015<br>
+                </h2>
+                <p>C<strong>hrist Alive Chris&shy;tian  Center Men&rsquo;s Con&shy;ference Men Alive 2015 Thursday-Saturday, October 22nd-24th</strong> with <strong>Pastor David Burrows</strong> and <strong>Pastor Dean A. Brown. (Thurs &amp; Fri  @ 7pm; Sat &amp; Sun @ 10am). </strong>Registration Fee:Adult Men - $25; Jr. High  &amp; Hight School Young Men&nbsp; - Free.  (Saturday Lunch is     ...<a href="men-alive-2015.html">Read More</a>
+</p>
                             <h4 id="articleTitle"><a
                                     href="events.html">More Events
                               &gt;&gt; </a></h4>
@@ -456,10 +459,10 @@ and Mission is Evangelism </h2>
                           <div class="bodytxt">
                             <div class="leftcol">
                               <ol>
-                                <li><a href="upcomingevents.html#a1"><strong>Sanctuary Dedication</strong></a></li>
-                                <li><a href="upcomingevents.html#a2"><strong>NY&#8200;Empowerment</strong></a></li>
-                                <li><a href="upcomingevents.html#a3"><strong>Living Victory (NY)</strong></a></li>
-                                <li><a href="upcomingevents.html#a4"><strong>Gospel Forum 2015 </strong></a></li>
+                                <li><a href="upcomingevents.html#a1"><span class="qa">Church Anniversary</span></a></li>
+                                <li><a href="upcomingevents.html#a2"><span class="qa">Saviour</span></a></li>
+                                <li><a href="upcomingevents.html#a3"><span class="qa">Fuel Conference</span></a></li>
+                                <li><a href="upcomingevents.html#a4"><span class="qa">Come and Rejoice</span></a></li>
                               </ol>
                             </div>
                             <h4 id="articleTitle"><a
