--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -95,21 +95,28 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt" id="articlebody">
   <h4 id="articleTitle">Upcoming Events</h4>
   <div id="authorname">
-    
-      <!--SECTION LEFT END-->
-      <p align="center" class="qa"><strong><a name="a1"></a>Sanctuary Dedication</strong></p>
-      <p><strong>Grace Int&rsquo;l Church NY - Sanc&shy;tuary  Dedication &amp; Celebra&shy;tion Services, Wed-Sun, Sept. 2nd-6th, 7pm</strong> nightly (<strong>Sun Svc. 10am &amp; 4pm</strong>) with <strong>Drs.  A.A.</strong> &amp;<strong> Alice Ajim</strong>, <strong>Drs. Segun</strong> &amp;<strong> Taiye Apoeso</strong>,<strong> Pastors Edwin </strong>&amp; <strong>Janet Rodriguez, Rev. Dean Brown, Bishop Julius  Abiola, Bishop David Ibeleme, Pas&shy;tor Delia Knox, Fiona Mellett</strong> &amp; <strong>Rev.  Niyi Adams</strong>. Venue: 770 Barry Street, Bronx, NY 10474, Call 718-737-4879 or  visit www.graceint.org</p>
-      <p align="center" class="qa"><strong><a name="a2"></a>NY&#8200;Empowerment</strong></p>
-      <p><strong>Labor</strong> <strong>Day</strong> <strong>Weekend Sept.</strong> <strong>5th</strong> &amp; <strong>6th</strong> The Theater at Madison Square Garden with <strong>Shirley Caesar, Marvin</strong> <strong>Sapp</strong>, <strong>Cece</strong> <strong>Wi&shy;nans</strong>, <strong>Tye</strong> <strong>Tribbett</strong>, <strong>Dr</strong>. <strong>Jas&shy;min  Sculark</strong>, <strong>Dorinda</strong> <strong>Clark-Cole</strong>, <strong>Martha Munizzi, Ta&shy;sha</strong> <strong>Cobbs</strong>, <strong>Wess Morgan</strong>, <strong>Marvia</strong> <strong>Providence, Uche</strong> <strong>Agu</strong>, <strong>Kevin</strong> <strong>Downswell</strong>, <strong>Travis</strong> <strong>Greene</strong> and more. <strong>Website:</strong><em>newyork  empowermentsummit.com</em></p>
-      <p class="qa"><strong><a name="a3"></a>Living Victory (NY)</strong></p>
-      <p>Join <strong>Kenneth &amp; Gloria  Cope&shy;land</strong> of <strong>Kenneth Copeland Ministries </strong>for our <strong>Living Victo&shy;ry  NY Faith Encounter</strong> on <strong>Fri-Sat, Sept. 11th-12th</strong> @ the NY Marriott  Marquis Broadway Ball&shy;room, 1535 Broadway, NY, NY 10036. Call 212-398-1900  Cost: FREE! Kenneth Copeland Min. Visit (817)852-6000.Web: http://  kcm.org/events/2015/living-victo ry-new-york-faith-encounter</p>
-      <p class="qa"><strong><a name="a4" id="a4"></a>Gospel Forum 2015 </strong></p>
-      <p><strong>Alabaster Group</strong> presents <strong>Gospel Forum 2015, Thurs&shy;day-Sunday, Sept.  24th-27th </strong>with <strong>Heidi</strong> <strong>Baker</strong>, <strong>Bill John&shy;son</strong>, <strong>Claudio  Freidzon</strong>, <strong>Jo&shy;seph Garlington, David Ho&shy;gan</strong>, &amp;<strong> </strong>more @ <strong>Hanover  Mar&shy;riott, </strong>Whippany, New Jersey. Visit http://gospelforum.org</p>
-      <p class="qa"><strong><a name="a5" id="a5"></a>35th Anniversary</strong><strong> </strong></p>
-      <p><strong>Grace Moravian Church </strong>presents <strong>35th Anniversary Gospel Celebration</strong> <strong>Saturday,  Sep&shy;tember 26th</strong>, <strong>6pm </strong>featuring Live per&shy;formances from <strong>Arlethia  Lind&shy;sey</strong> &amp; <strong>Felina Backer. </strong>Host Band: <strong>Zamar, The Grace Praise  Dancers</strong>, &amp; other ar&shy;tists. Location: <strong>New Jerusalem Bap&shy;tist Church</strong>,  122-05 Smith Street, Jamaica, NY 11434&nbsp;  (Doors open at 5:30pm) Tickets Presale: Adults $30; Under 12: $20; At  the Door Adults $35; Under 12:$25 (Students same rate as children under 12). To  purchase tickets call (718) 732-2681. Sponsored by Green Arch Construction.  www.greenarch construction.com      </p>
-      <p align="center" class="qa"><strong>Sunday Soul Gospel</strong></p>
-      <p>All You Can Eat for $24.95; Soul  &amp; Italian Food Brunch. Dis&shy;counts for Seniors &amp; Chil&shy;dren. <strong>Every  Sunday 12pm-5pm</strong> with a Special Musical Guest weekly @ <strong>Gran Piatto d&rsquo;Oro</strong> (on 5th Avenue), 1429 5th Avenue, corner of East 117th Street, NYC.  Reservations Suggested; call 212-726-2179 or by email, send to  info@xquisitesolutions.com</p>
-<p class="qa">&nbsp;</p></div></div><!-- InstanceEndEditable --> 
+    <p class="qa">Church Anniversary</p>
+    <p>      Dabar Bethlehem Cathedral&rsquo;s 4th Church Anniversary; Walk&shy;ing in Boldness, Wed, Oct. 1st; Fri, Oct 3rd &amp; Sun, Oct 5th with Bishop Donald Hilli&shy;ard, Jr. and Bishop H.Curtis Dou&shy;glas @ 218-38 98th Ave&shy;nue, Queens Village, NY 11429. Overseer Stanley M. &amp; Pastor Lenore Kidd, Pastors Emeri&shy;tus. Call (718)468-7595 or visit www.dbcathedral.org <br>
+    </p>
+    <p class="qa">Saviour<br>
+      </p>
+    <p>True North presents Saviour ( A Modern Oratorio; 20th An&shy;ni&shy;versary Performance), Satur&shy;day, October 25th, 6pm featuring Steve Green Larnelle Har&shy;ris, Wayne Watson, Twila Pa&shy;ris &amp; Keron Jackson with the True North Symphony Or&shy;che&shy;stra (David Hamilton, Con&shy;duc&shy;tor &amp; The New Ameri&shy;can Cho&shy;rus @ Carnegie Hall Stern Auditorium/Perelman Stage, 57th Street &amp; 7th Avenue. For tickets call 212-247-7800 or purchase online at Carnegiehall.org.<br>
+    </p>
+    <p class="qa">Fuel Conference<br>
+      </p>
+    <p>Fuel Conference, Fri&shy;day-Sun&shy;day, Octo&shy;ber 10th-12th with Da&shy;vid Demo&shy;la, Robert Madu, Chad Veach, Jacob Bur&shy;gei, Ri&shy;chard Pe&shy;rez, Ralph Castil&shy;lo, Daniel Sanabria, David Ham &amp; Alex McCor&shy;mick. Ar&shy;tists: Aaron Gil&shy;lespie, Social Club, KB, Hee Sun Lee, DJ YNOT, &amp; Fuel Worship. Ve&shy;nue: Faith Fellowship Mi&shy;ni&shy;s&shy;tries World Out&shy;reach Center, 2707 Main Street, Sayre&shy;ville, New Jersey 08872. Call (732)727-9500; visit: www.fuelconf.com</p>
+    <p class="qa">Come and Rejoice<br>
+      </p>
+    <p>Aranha Foundation presents Come &amp; Rejoice, October 18th, 6pm with Grammy Award-Winning Gospel Sin&shy;ger Israel Hough&shy;ton &amp; New Breed and Evangelist Da&shy;niel Kolenda @ Westches&shy;ter County C&shy;tr., 198 Central Avenue, White Plains, NY 10606. Tickets: ticketmaster. com/countycenter.biz (914) 457-4458/914-413-3685 Email: aranhafoundation@hotmail.com www.aranhafoundation.org</p>
+    <p class="qa">GBIMC Prayer Walk<br>
+      </p>
+    <p>6th Annual God Belongs In My City Prayer Walk 2014 - New York City, Oct. 25th @ 9am; Brooklyn, Staten Is&shy;land, Lower Manhattan meet at Point A; Queens,Upper Manhattan meet at Point B; Westchester, Bronx, Washington Heights meet at Point C. All meeting points will be walking to Time Square. Godbelongsinmycity.com/nyc.<br>
+    </p>
+    <p class="qa">Alive! / We Are!<br>
+      </p>
+    <p>Alive! 55 + and Kickin&rsquo; opens Saturday, October 4th (An en&shy;semble of &ldquo;solid gold&rdquo; singers 55 years and older sing about life, love, and family. We Are! opens Saturday, October 12th; (A passionate musical about the Emmy-award winning Gospel for Teens program in Harlem. Dempsey Theatre, 127 West Street, Harlem. For ticket information please call (212) 280-1045 or visit www.smarttix.com<br>
+    </p>
+  </div></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
