--- a/ads/eddy-farms.html
+++ b/ads/eddy-farms.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><em><img src="eddyfram.jpg" width="993" height="1290" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><em><img src="10x13-eddy-farm.jpg" width="1000" height="1300" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
