--- a/features.htm
+++ b/features.htm
@@ -135,21 +135,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/michael-leonard-james-headshot.jpg" alt="" name="authorpic" width="113" height="85" id="authorpic4" /></a><br>
+                  <a href="images/war-room-poster-2a015.jpg"><img src="images/war-room-poster-2015.jpg" alt="" name="authorpic" width="84" height="85" id="authorpic2" /></a><br>
   </div>
-                <h2>30th Anniversary</h2>
-                <p>Wow! Has it actually been 30  years since we started this awesome ministry tool? As difficult as it is to  believe that much time has passed, I've shared before how The Love Express has  impacted my personal life. I met the young lady who would one day become my  wife of 25 years, (this September 1) and the mother of my       ...<a href="30th-anniversary.html">Read More</a><br>
+                <h2>War Room Wins Big
+With <br>
+The Power of Prayer</h2>
+                <p>War Room&rsquo;s Priscilla Shirer  (Elizabeth Jordan) and her husband T.C. Stallings (Tony Jordan) are a couple  who on the surface have it all: solid careers, a beautiful home, and a cute  middle schooler. The reality is quite different than appearances. They live in  a metaphorical &ldquo;war zone&rdquo; and they quite regularly ambush each other with harsh  and cynical...<a href="war-room-wins-big-with-the-power-of-prayer.html">Read More</a><br>
               </p>
-              
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/racial-reconciliation-photo.jpg" alt="" name="authorpic" height="85" id="authorpic5" /></a><br>
-</div>
-                <h2>How to Actually Fight<br>
-for Racial Reconciliation</h2>
-                <p>These days, as people around the  nation become more aware of racial injustice, many young Christians of all  races are eager to be part of the solution. That&rsquo;s  great news; we need every available hand on deck! But since so many of us have  grown up in ra&shy;cially isolated communities, many...<a href="how-to-actually-fight-for-racial-reconciliation.html">Read More</a><br>
-              </p>
-              
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/dr.mac-pier.jpg" alt="" name="authorpic6" width="57" height="85" id="authorpic6" /></div>
@@ -158,25 +150,27 @@ for Racial Reconciliation</h2>
                 <p>For the past five years <strong><u>Movement  Day</u></strong> has been catalyzing leadership teams to serve the world&rsquo;s largest  cities more effectively by advancing high-level, city-changing collaborative  partnerships. On <strong>October 29, 2015</strong>, leaders will once again gather at the  New York Hilton Midtown to advance Gospel movements in cities     ...<a href="catalytic-learders-maximize-potential-at-movement-day-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/shirely-caesar-jpg-photo.jpg" alt="Shirley Caesar" title="Shirley Caesar" name="authorpic" width="116" height="85" id="authorpic6" /></div>
-                <h2>2015 New York Empowerment Summit</h2>
-                <p> <strong>Labor</strong> <strong>Day</strong> <strong>Weekend Sept.</strong> <strong>5th</strong> &amp; <strong>6th</strong> The Theater at  Madison Square Garden with <strong>Shirley  Caesar, Marvin</strong> <strong>Sapp</strong>, <strong>Cece</strong> <strong>Wi&shy;nans</strong>, <strong>Tye</strong> <strong>Tribbett</strong>, <strong>Dr</strong>. <strong>Jasmin Sculark</strong>, <strong>Dorinda</strong> <strong>Clark-Cole</strong>, <strong>Martha Munizzi,  Ta&shy;sha</strong> <strong>Cobbs</strong>, <strong>Wess Morgan</strong>, <strong>Mar</strong><strong>via</strong> <strong>Providence, Uche</strong> <strong>Agu</strong>, <strong>Kevin</strong> <strong>Downswell</strong>, <strong>Travis</strong> <strong>Greene</strong> and more  ...<a href="2015-new-york-empowerment-summit.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/bert-alice-bocachica.jpg" alt="" name="authorpic" width="89" height="85" id="authorpic7" /></div>
-                <h2>Our Vision, Heart, Passion
-and Mission is Evangelism </h2>
-                <p>Last August, during Rap Fest 2014, as some ar&shy;tists were  gracing the stage and others were hitting the vendor areas skillfully securing  their next feature, cy&shy;pher,  sponsorship, gig or tour, the Lord  impressed a powerful Word upon my wife and I and our hearts were heavy.                 Rap Fest was  created with the purpose of evangelizing local neighborhoods by     ...<a href="our-vision-bert-and-alice-bocachica.html">Read More</a>
+</div>
+                <h2>Appreciation Month
+Prayers <br>
+For Your Pastor</h2>
+                <p>Let the thought sink deep into  the heart of every church, that their minister will be such a minister as their  prayers make him... How perilous is the condition of that minister... whose  heart is not encouraged, whose hands are not strengthened, and who is not  upheld by the prayers of his people!                 &ldquo;It  is at a fearful expense that ministers are  ...<a href="prayers-for-your-pastors-appreciation-month.html">Read More</a>                                
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
-                <h2>Collyde Summit 2015</h2>
-                <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in the NJ, NY and PA area, who love Jesus and are convicted to become  world changers. Collyde   ...<a href="collyde-summit-2015.html">Read More</a>
+                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic4" /></div>
+                <h2>I Must Be About My Father&rsquo;s<br>
+Business - Jesus </h2>
+                <p align="center">Not only is Jesus our Savior and  Lord, He&rsquo;s also the CEO of Father&rsquo;s business. He produces fine, living  products, and supplies unique services to unbelievers and believers who are  among His customers. We  were once lost and condemned to death because of sin.&nbsp; His service to us was that     ...<a href="jimbiscardi-about-my-fathers-business.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/edith-rose-30th-anniversary.jpg" name="authorpic" height="85" id="authorpic" /></div>
-                <h2>Viewpoint: 30th Anniversary</h2>
-                <p align="center">Key people in one small room at  33rd Street and 7th Ave. <strong>Edith, Rose, Zoraida, William, Michael, Peter and  Sidney. </strong>What a family! None of us knew how to do a newspaper, but with  God&rsquo;s help we did it. Our first newspaper was eight pages and God&rsquo;s wonderful  dream for the Tri-State area came true ...<a href="rose-lictro--viewpoint-30th-anniversary.html">Read More</a></p>
+                </div>
+                <h2>Does Prayer Even Make A Difference?</h2>
+                <p><em>Jesus told his disciples a  story about how they should keep on praying and never give up. (Luke 18:1 CEV)</em>                Let&rsquo;s be honest here.&nbsp; How many times have you prayed and prayed&hellip;  and praaaayed about something in your life, only to see no change and no  affirmative answer to your prayer?...<a href="collyde-summit-2015.html">Read More</a>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/rose-vacation.jpg" name="authorpic" width="72" height="85" id="authorpic3" align="right" /></div>
+                <h2>Viewpoint: Vacation-Kids-Jesus-Beauty</h2>
+                <p>On Cruise ships they always have  interdenominational services on Sunday mornings. I always enjoy these services  and met Pastors and their families who sometimes knew about the Love Express. At  Resorts they always have a Gideon Bible or a Spanish Bible in the End table  draws   ...<a href="rose-lictro--vacation.html">Read More</a></p>
 </div>
             </div>
           <!--SECTION LEFT BEGIN-->
