--- a/womens-conference-2015.html
+++ b/womens-conference-2015.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Focus On The Children:</title>
+<title>Women&rsquo;s Conference 2015</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -47,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">FEATURES</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -73,32 +73,19 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-               <!--SECTION LEFT BEGIN-->
+        <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="100" height="125" alt="Charlotte Hall" /></div>
-            
-            <h4 id="articleTitle">Focus On The Children:            Silent No More<br>
+            <div id="articlepic"><img src="images/carol-kent.jpg" alt="" name="authorpic" width="199" height="200" id="authorpic" /> </div>
+            <h4 id="articleTitle">Women&rsquo;s Conference 2015<br>
             </h4>
-            <h4 class="qa">The Importance of The School Year Routine</h4>
-            <div id="authorname">
-              <p>by Elder Charlotte Hall</p>
-            </div>
-
-            <p align="center">The school year 2015- 2016 is  well on its way. Its extremely important for the school year routines to be  checked and possibly re-vamped to ensure success and promotion.&nbsp; </p>
-            <p>1.  Hopefully by now the bedtime hour has been set and is being followed. An early  set bedtime is vital. The National Sleep Foundation says kids ages 3 to 5  require 10 to 13 hours of sleep; those between the ages 6 and 13 need nine to  11 hours; and teens should get eight to 10 hours of sleep nightly. Adequate  sleep is essential for brain development, academic performance and good  behavior. If kids need to be awake at 6:30 A.M., a good bedtime would be 7:30  P.M. All &ldquo;gadgets off&rdquo; rule an hour before bedtime will inspire deep and  restful sleep. Try it! Include bedtime prayer.&nbsp; </p>
-            <p>2.  Don&rsquo;t wait to vaccinate. Keep immunizations up to date. Check with your local  Health Dept. if necessary. </p>
-            <p>3.  Breakfast is a must. Studies have shown that children who eat breakfast attended  school an average of 1.5 more days than breakfast skippers. Math scores  averaging 17.5 percent higher and kids are 20 percent more likely to gradute  high school. &ldquo;For brain power and sustained energy, a combo of protein, a hard  boiled egg (made in advance) and complex carbohydrates, a piece of fresh fruit&rdquo;  says nutritionist Rovenia Brock, Ph.D.,can be an excellent start. Hot cereal  such as oatmeal is another healthy suggestion. </p>
-            <p>4.  Wage war on germs. The classroom can be a breeding ground for germs. Send kids  off with hand sanitizer and encourage them to&nbsp;&nbsp;  wash hands frequently. Teach them to cough/sneeze into the elbow of the  sleeve. </p>
-            <p>5.  Make mornings far less stressful. Figure out how much time it takes for each  morning task (getting dressed, doing hair, showering, brushing teeth, etc.),  add them up and tack on 10 additional minutes to ensure a smooth morning  departure.</p>
-            <p>6.  Beat the bully blues. Encourage your children to feel free to come to you if  they ever feel bullied and you&rsquo;ll work it out together. Always listen to your  children and ask them everyday about their experiences, good, bad or  indifferent. This lends to good communication between parent and child.</p>
-            <p>7.  Check book bags and backpacks weekly for overload.</p>
-            <p>8.Don&rsquo;t  over stimulate children with too many extracurricular activities. Balance is  the key.</p>
-            <p>9.  Allow children time to de-stress, relax and recharge after school, before  starting homework. Allow at least 30 minutes to an hour. </p>
-            <p>10.Try  to establish a home work area, free from clutter and away from distractions.  Reading to your child just twenty minutes a day will improve reading skills.  Let kids complete their own assignments. Go over the directions. If the child  doesn&rsquo;t understand let him/her take it back to the teacher for further  explanation. Encourage them not to be afraid to ask the teach for further  assistance.</p>
-            <p>11.  Encourage perseverance, hard work pays off. If your child is getting poor  grades, find out why. Is he or she lazy, bored, looking for attention? Is the  problem health related? Or does the child simply not understand a subject? At  that point you can determine if a tutor, a doctor, counseling, punishment is  required. Don&rsquo;t wait for that first parent teacher conference or report card to  find out if your child is having trouble. Observe your child for signs of  irritability, restlessness, becoming withdrawn. Let them Know you&lsquo;ve noticed  some changes and encourage them to talk. </p>
-            <p>12.  Clothing 101: Keep them clean and fresh. How kids look can affect how they  perform.</p>
-            <p>13.  Pray daily and intentionally for your children. Pray without ceasing as the  Bible instructs us, for the children and everything school related. </p>
-            <p><strong><em>Information gathered from  article entitled Elevate, by Nina Malkin. Ebony.com Johnson publication,  August, 2015 Charlotte A.Hall, Pastor/Founder, Emanuel Pra&shy;yer Ministry Post  Office Box 210-054, Brooklyn, New York 11221 ladyhall8 @yahoo.com </em></strong></p>
+              <div id="authorname"><!--SECTION LEFT END-->
+ </div>
+              <p >                <span class="qa">Saturday, November 14th</span><br>
+                <br>
+                C<strong>alvary Baptist Church</strong> - <strong>Women&rsquo;s  Conference 2015 </strong>(Topic: Unquenchable Faith) with guest Speaker <strong>Carol  Kent</strong>, <strong>Saturday, No&shy;vember 14th, 9:30am-4pm</strong> @ 123 West 57th Street,  (between 6th &amp; 7th Ave&shy;nues), New York, NY 10019.</p>
+              <p><strong>Carol  Kent</strong> is a best-selling author and a popular international public speaker  best known for being dyna&shy;mic, humorous, encouraging and biblical. Cost: $25.00  (lunch not icluded).</p>
+              <p><strong><em>For further information or to register please call us at  (212) 975-00170 or you can register online at www.cbcnyc.org. </em></strong></p>
+              <p><strong><em>For more about Carol Kent please visit her at  www.carolkent.org</em></strong></p>
 </div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
